buildSrc/src/test/resources/test-projects/invalid-demo/demos/duplicate_two/build.gradle.kts
plugins {
    id("olc.game_engine.demo")
}

demoModule {
    applicationName = "DuplicateTwo"
    entryPoint = "demos.duplicatetwo.main"
}
